Add large files to Git LFS

--- a/recommender_sys.ipynb
+++ b/recommender_sys.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Configuration\n",
-    "imgs_path = \"fashion-dataset/fashion-dataset/images\"\n",
+    "imgs_path = \"large_files\\\\fashion-dataset\\\\fashion-dataset\\\\images\"\n",
     "imgs_model_width, imgs_model_height = 299, 299\n",
     "BATCH_SIZE = 20\n",
     "CHUNK_SIZE = 300\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting Features: 2000it [1:16:27,  2.29s/it]                          \n"
+      "Extracting Features: 2000it [1:12:37,  2.18s/it]                          \n"
      ]
     }
    ],
@@ -158,24 +158,26 @@
     "    all_features = np.array(all_features)\n",
     "    \n",
     "    # Save features and file lists\n",
-    "    np.save('ml\\\\all_features.npy', all_features)\n",
-    "    with open('ml\\\\train_files.pkl', 'wb') as f:\n",
+    "    np.save('large_files\\\\ml\\\\all_features.npy', all_features)\n",
+    "    with open('large_files\\\\ml\\\\train_files.pkl', 'wb') as f:\n",
     "        pickle.dump(train_files, f)\n",
-    "    with open('ml\\\\test_files.pkl', 'wb') as f:\n",
+    "    with open('large_files\\\\ml\\\\test_files.pkl', 'wb') as f:\n",
     "        pickle.dump(test_files, f)\n",
     "    \n",
     "    return feat_extractor, all_features, train_files, test_files\n",
     "\n",
     "# Run feature extraction\n",
-    "feat_extractor, all_features, train_files, test_files = extract_features()\n",
+    "feat_extractor, all_features, train_files, test_files = \n",
+    "\n",
+    "extract_features()\n",
     "\n",
     "# Save feature extractor\n",
-    "feat_extractor.save('ml\\\\feature_extractor_model.keras')"
+    "feat_extractor.save('large_files\\\\ml\\\\feature_extractor_model.keras')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +186,7 @@
        "(39996, 2048)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -265,9 +267,9 @@
     "pca, all_features_pca = apply_pca(all_features)\n",
     "\n",
     "# Save PCA model and transformed features\n",
-    "with open('ml\\\\pca_model.pkl', 'wb') as file:\n",
+    "with open('large_files\\\\ml\\\\pca_model.pkl', 'wb') as file:\n",
     "    pickle.dump(pca, file)\n",
-    "np.save('ml\\\\all_features_pca.npy', all_features_pca)"
+    "np.save('large_files\\\\ml\\\\all_features_pca.npy', all_features_pca)"
    ]
   },
   {
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +295,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Image Chunks: 100%|██████████| 134/134 [05:27<00:00,  2.45s/it]\n"
+      "Processing Image Chunks: 100%|██████████| 134/134 [05:09<00:00,  2.31s/it]\n"
      ]
     }
    ],
@@ -316,23 +318,24 @@
     "            top_similarities_euclidean[train_files[i + idx]] = [(train_files[j], similarities_euclidean[j]) for j in top_indices_euclidean if j != i + idx]\n",
     "\n",
     "    # Save similarities\n",
-    "    with open('ml\\\\top_similarities_cosine.pkl', 'wb') as file:\n",
+    "    with open('large_files\\\\ml\\\\top_similarities_cosine.pkl', 'wb') as file:\n",
     "        pickle.dump(top_similarities_cosine, file)\n",
-    "    with open('ml\\\\top_similarities_cosine.json', 'w') as file:\n",
+    "    with open('large_files\\\\ml\\\\top_similarities_cosine.json', 'w') as file:\n",
     "        json.dump({k: [(v[0], float(v[1])) for v in vs] for k, vs in top_similarities_cosine.items()}, file)\n",
-    "    with open('ml\\\\top_similarities_euclidean.pkl', 'wb') as file:\n",
+    "    with open('large_files\\\\ml\\\\top_similarities_euclidean.pkl', 'wb') as file:\n",
     "        pickle.dump(top_similarities_euclidean, file)\n",
-    "    with open('ml\\\\top_similarities_euclidean.json', 'w') as file:\n",
+    "    with open('large_files\\\\ml\\\\top_similarities_euclidean.json', 'w') as file:\n",
     "        json.dump({k: [(v[0], float(v[1])) for v in vs] for k, vs in top_similarities_euclidean.items()}, file)\n",
     "    \n",
     "    return top_similarities_cosine, top_similarities_euclidean\n",
     "\n",
     "# Load PCA features and image files if not in memory\n",
     "if 'all_features_pca' not in locals():\n",
-    "    all_features_pca = np.load('ml\\\\all_features_pca.npy')\n",
+    "    all_features_pca = np.load('large_files\\\\ml\\\\all_features_pca.npy')\n",
     "if 'train_files' not in locals():\n",
-    "    with open('ml\\\\train_files.pkl', 'rb') as f:\n",
+    "    with open('large_files\\\\ml\\\\train_files.pkl', 'rb') as f:\n",
     "        train_files = pickle.load(f)\n",
+    "\n",
     "\n",
     "# Calculate similarities\n",
     "top_similarities_cosine, top_similarities_euclidean = calculate_similarities(all_features_pca, train_files)"
