Add model file to Git LFS

--- a/recommender_sys.ipynb
+++ b/recommender_sys.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Configuration\n",
-    "imgs_path = \"large_files\\\\fashion-dataset\\\\fashion-dataset\\\\images\"\n",
+    "imgs_path = \"../fashion-dataset/images\"\n",
     "imgs_model_width, imgs_model_height = 299, 299\n",
     "BATCH_SIZE = 20\n",
     "CHUNK_SIZE = 300\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Extracting Features: 2000it [1:12:37,  2.18s/it]                          \n"
+      "Extracting Features: 2000it [1:11:43,  2.15s/it]                          \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
      ]
     }
    ],
@@ -167,12 +174,11 @@
     "    return feat_extractor, all_features, train_files, test_files\n",
     "\n",
     "# Run feature extraction\n",
-    "feat_extractor, all_features, train_files, test_files = \n",
-    "\n",
-    "extract_features()\n",
+    "feat_extractor, all_features, train_files, test_files = extract_features()\n",
     "\n",
     "# Save feature extractor\n",
-    "feat_extractor.save('large_files\\\\ml\\\\feature_extractor_model.keras')"
+    "#feat_extractor.save('large_files\\\\ml\\\\feature_extractor_model.keras')\n",
+    "feat_extractor.save('large_files/ml/feature_extractor_model.h5', save_format='h5')\n"
    ]
   },
   {
